--- a/ClassR_3.html
+++ b/ClassR_3.html
@@ -12,6 +12,7 @@
     <style>
         .First {
             display: flex;
+            margin-top: 40px;
             justify-content: space-around;
             background: darkred;
             color: azure;
@@ -104,7 +105,7 @@
 
         .container {
             display: flex;
-            margin-top: 50px;
+            margin: 50px 20px; /*means 50px space from the top and bottom, 20px space right and left*/
             justify-content: space-evenly;
             padding-top: 50px;
             padding-bottom: 30px;
