--- a/ClassR_2.html
+++ b/ClassR_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Dev | Lesson 2</title>
-    <link rel="stylesheet" href="CSS/Table.css">
+    <link rel="stylesheet" href="CSS/table.css">
 </head>
 <body>
 
