--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
 
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<NAV-BAR>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+    <nav>
+        <ul>
+<!--li>a   creates a list with an anchor tag-->
+            <li><a href="#">Class R</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Lectures</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">FAQ</a></li>
+
+        </ul>
+    </nav>
+
 </body>
 </html>
