--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>My Website</title>
-<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<CSS>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<BOOSTRAP-CDN>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<CSS>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
     <link rel="stylesheet" href="CSS/style.css">
+
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<GOOGLE-FONTS>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Questrial&family=Qwitcher+Grypen:wght@400;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -12,14 +24,27 @@
     <nav>
         <ul>
 <!--li>a   creates a list with an anchor tag-->
-            <li><a href="#">Class R</a></li>
+            <li><a href="#">Class<span>R</span></a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Lectures</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">FAQ</a></li>
-
+            <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
+
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<FOOTER>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+    <footer>
+        <div class="social-icons">
+            <p><i class="fa fa-twitter" aria-hidden="true"></i></p>
+            <p><i class="fa fa-facebook" aria-hidden="true"></i></p>
+            <p><i class="fa fa-whatsapp" aria-hidden="true"></i></p>
+        </div>
+
+        <div class="footer-notes">
+            &copy; 2024 . All Rights Reserved . KingCharlesV
+        </div>
+    </footer>
 
 </body>
 </html>
