--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<CSS>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
     <link rel="stylesheet" href="CSS/style.css">
 
@@ -33,12 +34,36 @@
         </ul>
     </nav>
 
+<!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<HERO-SEC>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
+
+<div class="hero-sec">
+    <div>
+        <h2>The story of my life</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto debitis, doloribus error fugiat id illo magnam,
+                minus non repellat saepe, sapiente soluta tempore tenetur voluptatum!</p>
+    </div>
+</div>
+
+<div class="hero-sec-content">
+    <div class="hero-sec-img">
+        <img src="" alt="">
+    </div>
+
+    <div class="right-text">
+        <h2>Lorem ipsum.</h2>
+        <p>lorem15  </p>
+    </div>
+</div>
+
 <!--<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<FOOTER>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
     <footer>
         <div class="social-icons">
             <p><i class="fa fa-twitter" aria-hidden="true"></i></p>
             <p><i class="fa fa-facebook" aria-hidden="true"></i></p>
             <p><i class="fa fa-whatsapp" aria-hidden="true"></i></p>
+
+<!--            <a href="" target="blank"> <img src="" alt="Twitter"></a>-->
+
         </div>
 
         <div class="footer-notes">
